Updated V4 ---------- 1.Optimized Fall history activity.
-R

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <activity android:name=".LogActivity" />
         <activity
             android:name=".SettingActivity"
+            android:theme="@android:style/Theme.NoTitleBar"
             android:label="@string/title_activity_setting" >
         </activity>
     </application>
